--- a/public/studyboard_contents.html
+++ b/public/studyboard_contents.html
@@ -88,7 +88,7 @@
 				<div class="inner">
 					<section>
 						<div>
-							<label id="title" style="text-align:center"><h2>글 제목</h2></label>
+							<label id="title" style="text-align:center"><h2></h2></label>
 						</div>
 						<!--카테고리도 필요함-->
 						<div style="margin-top:45px">
