--- a/public/new_channel.html
+++ b/public/new_channel.html
@@ -77,7 +77,7 @@
   <body>
     <div style="margin:10px">
       <label><h3>채널 이름</h3></label>
-      <input type='text' style="width:500px; id="channel_name"/>
+      <input type='text' style="width:500px" id="channel_name"/>
       <label style="margin-top:30px;"><h3>채널 로고</h3></label>
       <input type="file" id="input"/>
     </div>
