페이지 연결

--- a/public/playlist_delete.html
+++ b/public/playlist_delete.html
@@ -77,7 +77,7 @@ window.addEventListener("message", function(event){
 
 						<div style="margin-left:40%" >
 							<ul class="actions"  >
-								<li><a href="#" class="button">+새 재생목록 생성</a></li>
+								<li><a href="playlist_produce.html" class="button">+새 재생목록 생성</a></li>
 							</ul>
 						</div>
 			</section>
@@ -139,10 +139,10 @@ window.addEventListener("message", function(event){
           채널 이름</h2>
           </header>
           <ul>
-            <li><a href="index.html">동영상 업로드</a></li>
-            <li><a href="index.html">동영상 삭제</a></li>
-            <li><a href="index.html">재생목록 생성 및 삭제 </a></li>
-            <li><a href="index.html">로그아웃</a></li>
+						<li><a href="upload.html">동영상 업로드</a></li>
+            <li><a href="vedio_delete.html">동영상 삭제</a></li>
+            <li><a href="playlist_delete.html">재생목록 생성 및 삭제 </a></li>
+            <li><a href="javascript:openWindowPop('login.html', 'popup');">로그아웃</a></li>
 
           </ul>
         </nav>
