--- a/public/subscribed_channel.html
+++ b/public/subscribed_channel.html
@@ -119,10 +119,10 @@ window.addEventListener("message", function(event){
       <h2>Menu</h2>
     </header>
     <ul>
-      <li><a href="index.html">내 채널 관리</a></li>
-      <li><a href="index.html">구독 채널 관리</a></li>
-      <li><a href="index.html">내 스팩 관리</a></li>
-      <li><a href="index.html">로그아웃</a></li>
+      <li><a href="mychannel.html">내 채널 관리</a></li>
+      <li><a href="subscribed_channel.html">구독 채널 관리</a></li>
+      <li><a href="specboard.html">내 스팩 관리</a></li>
+      <li><a href="javascript:openWindowPop('login.html', 'popup');">로그아웃</a></li>
 
     </ul>
   </nav>
