--- a/public/mychannel.html
+++ b/public/mychannel.html
@@ -331,7 +331,7 @@ window.onload=function(){
     <ul>
       <li><a href="mychannel.html">내 채널 관리</a></li>
       <li><a href="subscribed_channel.html">구독 채널 관리</a></li>
-      <li><a href="index.html">내 스팩 관리</a></li>
+      <li><a href="specboard.html">내 스팩 관리</a></li>
       <li><a href="javascript:openWindowPop('login.html', 'popup');">로그아웃</a></li>
 
     </ul>
