--- a/public/specboard.html
+++ b/public/specboard.html
@@ -234,60 +234,18 @@ body{
 
 
 				    <!-- Menu -->
-				      <nav id="menu">
-				        <header class="major">
-				          <h2>카테고리</h2>
-				        </header>
-				        <ul>
-				          <li>
-				            <span class="opener">스포츠</span>
-				            <ul>
-				              <li><a href="categories/sports/basketball.html">농구</a></li>
-				              <li><a href="categories/sports/baseball.html">야구</a></li>
-				              <li><a href="categories/sports/football.html">축구</a></li>
-				              <li><a href="categories/sports/swimming.html">수영</a></li>
-				            </ul>
-				          </li>
-				          <li>
-				            <span class="opener">음악</span>
-				            <ul>
-				              <li><a href="categories/music/piano.html">피아노</a></li>
-				              <li><a href="categories/music/guitar.html">기타</a></li>
-				              <li><a href="categories/music/flute.html">플룻</a></li>
-				              <li><a href="categories/music/violin.html">바이올린</a></li>
-				            </ul>
-				          </li>
-				          <li>
-				            <span class="opener">생활</span>
-				            <ul>
-				              <li><a href="categories/lifestyle/cleaning.html">청소</a></li>
-				              <li><a href="categories/lifestyle/saving.html">저축</a></li>
-				              <li><a href="categories/lifestyle/cooking.html">요리</a></li>
-				              <li><a href="categories/lifestyle/education.html">교육</a></li>
-				            </ul>
-				          </li>
-				          <li>
-				            <span class="opener">컴퓨터</span>
-				            <ul>
-				              <li><a href="categories/compter/web.html">웹프로그래밍</a></li>
-				              <li><a href="categories/compter/db.html">데이터베이스</a></li>
-				              <li><a href="categories/compter/data_com.html">데이터통신</a></li>
-				              <li><a href="categories/compter/language.html">언어(자바/c++)</a></li>
-				            </ul>
-				          </li>
-				          <li>
-				            <span class="opener">게임</span>
-				            <ul>
-				              <li><a href="categories/game/lol.html">롤</a></li>
-				              <li><a href="categories/game/fifa.html">피파</a></li>
-				              <li><a href="categories/game/maplestory.html">메이플</a></li>
-				              <li><a href="categories/game/cartrider.html">카트라이더</a></li>
-				            </ul>
-				          </li>
-									<li><a href="studyboard.html">스터디게시판</a></li>
+						<nav id="menu">
+							<header class="major">
+								<h2>Menu</h2>
+							</header>
+							<ul>
+								<li><a href="mychannel.html">내 채널 관리</a></li>
+								<li><a href="subscribed_channel.html">구독 채널 관리</a></li>
+								<li><a href="specboard.html">내 스팩 관리</a></li>
+								<li><a href="javascript:openWindowPop('login.html', 'popup');">로그아웃</a></li>
 
-				        </ul>
-				      </nav>
+							</ul>
+						</nav>
 
 
 						</div>
