--- a/public/video_delete.html
+++ b/public/video_delete.html
@@ -136,10 +136,10 @@ window.addEventListener("message", function(event){
           채널 이름</h2>
           </header>
           <ul>
-            <li><a href="index.html">동영상 업로드</a></li>
-            <li><a href="index.html">동영상 삭제</a></li>
-            <li><a href="index.html">재생목록 생성 및 삭제 </a></li>
-            <li><a href="index.html">로그아웃</a></li>
+            <li><a href="upload.html">동영상 업로드</a></li>
+            <li><a href="vedio_delete.html">동영상 삭제</a></li>
+            <li><a href="playlist_delete.html">재생목록 생성 및 삭제 </a></li>
+            <li><a href="javascript:openWindowPop('login.html', 'popup');">로그아웃</a></li>
 
           </ul>
         </nav>
