--- a/public/studyboard_write.html
+++ b/public/studyboard_write.html
@@ -69,6 +69,39 @@
   if (error) {
     // The write failed...
   } else {
+
+
+    // 레벨기능
+                 var exp;
+                 var lv;
+                 var levelRef = firebase.database().ref('userInfo/'+uid+"/level_info/");
+                 levelRef.once("value",function(snapshot){
+                   exp = snapshot.val().exp;
+                   lv = snapshot.val().level;
+
+
+                 exp +=30;
+                 console.log("게시판 업로드 성공");
+
+                 if(Math.pow(2,lv-1)*50 <= exp ){
+                   if(Math.pow(2,lv)*50 <= exp){
+                     lv +=1;
+
+                     console.log("레벨업 축하드립니다");
+                   }
+                 }
+
+                 levelRef.update({
+                   exp: exp,
+                   level: lv
+                 });
+
+                 });
+
+
+
+
+
     alert("작성이 완료되었습니다");
    location.href='studyboard_list.html';
   }
