--- a/public/new_channel.html
+++ b/public/new_channel.html
@@ -50,6 +50,29 @@
       var channel_name = document.getElementById('channel_name').value;
       var uploadTask = imagesRef.put(selectedFile);
       var imgpath;
+
+      var s = document.getElementById("selected_category");
+      var selected_option = s.options[s.selectedIndex].value;
+      var selected_opt;
+
+      switch(selected_option){
+        case 'A':   var s = document.getElementById("selected_sports");
+                    var selected_opt = s.options[s.selectedIndex].value;
+            break;
+        case 'B': var s = document.getElementById("selected_music");
+                    var selected_opt = s.options[s.selectedIndex].value;
+            break;
+        case 'C': var s = document.getElementById("selected_living");
+                    var selected_opt = s.options[s.selectedIndex].value;
+            break;
+        case 'D': var s = document.getElementById("selected_computer");
+                    var selected_opt = s.options[s.selectedIndex].value;
+            break;
+        case 'E': var s = document.getElementById("selected_game");
+                    var selected_opt = s.options[s.selectedIndex].value;
+            break;
+      }
+      console.log("선택된 옵션: "+selected_opt);
       uploadTask.on('state_changed', function(snapshot){
         var progress = (snapshot.bytesTransferred / snapshot.totalBytes) * 100;
         console.log('Upload is ' + progress + '% done');
@@ -66,18 +89,102 @@
       }, function(){
         uploadTask.snapshot.ref.getDownloadURL().then(function(downloadURL) {
         console.log('File available at', downloadURL);
-        channelRef_user.child("channel_info").push({"name":channel_name, "time": time, "imgpath": downloadURL});
-       channelRef_list.push({"name":channel_name, "time": time, "imgpath": downloadURL, "user": uid});
+        channelRef_user.child("channel_info").push({"name":channel_name, "time": time, "imgpath": downloadURL, "category": selected_opt});
+       channelRef_list.push({"name":channel_name, "time": time, "imgpath": downloadURL, "user": uid, "category": selected_opt});
         });
       });
     }
     </script>
+    <script>
+    function list_change(){
+      document.getElementById("selected_sports").style.display="none";
+      document.getElementById("selected_music").style.display="none";
+      document.getElementById("selected_living").style.display="none";
+      document.getElementById("selected_computer").style.display="none";
+      document.getElementById("selected_game").style.display="none";
 
+    var s = document.getElementById("selected_category");
+    var selected_option = s.options[s.selectedIndex].value;
+
+    switch(selected_option){
+      case 'A': document.getElementById("selected_sports").style.display="block";
+          break;
+      case 'B': document.getElementById("selected_music").style.display='block';
+          break;
+      case 'C': document.getElementById("selected_living").style.display='block';
+          break;
+      case 'D': document.getElementById("selected_computer").style.display='block';
+          break;
+      case 'E': document.getElementById("selected_game").style.display='block';
+          break;
+    }
+  }
+    </script>
   </head>
   <body>
     <div style="margin:10px">
       <label><h3>채널 이름</h3></label>
       <input type='text' style="width:500px" id="channel_name"/>
+      <label><h3>재생목록</h3></label>
+  <li id='category'>
+      <div >
+          <select id='selected_category' onchange="list_change()">
+              <option value="A">스포츠</option>
+              <option value='B'>음악</option>
+              <option value='C'>생활</option>
+              <option value='D'>컴퓨터</option>
+              <option value='E'>게임</option>
+          </select>
+      </div>
+  </li>
+
+
+      <div >
+          <select id='selected_sports'>
+              <option value='basketball'>농구</option>
+              <option value='baseball'>야구</option>
+              <option value='football'>축구</option>
+              <option value='swimming'>수영</option>
+          </select>
+      </div>
+
+
+      <div >
+          <select id='selected_music' style="display:none">
+              <option value='piano'>피아노</option>
+              <option value='guitar'>기타</option>
+              <option value='flute'>플룻</option>
+              <option value='violin'>바이올린</option>
+          </select>
+      </div>
+
+      <div >
+          <select id='selected_living' style="display:none">
+              <option value='cleaning'>청소</option>
+              <option value='saving'>저축</option>
+              <option value='cooking'>요리</option>
+              <option value='education'>교육</option>
+          </select>
+      </div>
+
+      <div >
+          <select id='selected_computer' style="display:none">
+              <option value='web'>웹프로그래밍</option>
+              <option value='db'>데이터베이스</option>
+              <option value='data_com'>데이터통신</option>
+              <option value='language'>언어(자바/C++)</option>
+          </select>
+      </div>
+
+      <div >
+          <select id='selected_game' style="display:none">
+              <option value='lol'>롤</option>
+              <option value='fifa'>피파</option>
+              <option value='maplestory'>메이플</option>
+              <option value='cartrider'>카트라이더</option>
+          </select>
+      </div>
+
       <label style="margin-top:30px;"><h3>채널 로고</h3></label>
       <input type="file" id="input"/>
     </div>
