--- a/public/studyboard_write.html
+++ b/public/studyboard_write.html
@@ -35,6 +35,30 @@
       initApp();
     }
 
+    function list_change(){
+      document.getElementById("selected_sports").style.display="none";
+      document.getElementById("selected_music").style.display="none";
+      document.getElementById("selected_living").style.display="none";
+      document.getElementById("selected_computer").style.display="none";
+      document.getElementById("selected_game").style.display="none";
+
+    var s = document.getElementById("selected_category");
+    var selected_option = s.options[s.selectedIndex].value;
+
+    switch(selected_option){
+      case 'A': document.getElementById("selected_sports").style.display="block";
+          break;
+      case 'B': document.getElementById("selected_music").style.display='block';
+          break;
+      case 'C': document.getElementById("selected_living").style.display='block';
+          break;
+      case 'D': document.getElementById("selected_computer").style.display='block';
+          break;
+      case 'E': document.getElementById("selected_game").style.display='block';
+          break;
+    }
+    }
+
     function db(){
       var user = firebase.auth().currentUser;
       if (user != null) {
@@ -58,13 +82,37 @@
       var contents = document.getElementById("contents").value;
       var username = name;
 
-      channelRef_user.child('board_info').push({"title": title, "time": time, "contents": contents, "username": username});
+      var s = document.getElementById("selected_category");
+      var selected_option = s.options[s.selectedIndex].value;
+      var selected_opt;
+
+      switch(selected_option){
+        case 'A':   var s = document.getElementById("selected_sports");
+                    var selected_opt = s.options[s.selectedIndex].value;
+            break;
+        case 'B': var s = document.getElementById("selected_music");
+                    var selected_opt = s.options[s.selectedIndex].value;
+            break;
+        case 'C': var s = document.getElementById("selected_living");
+                    var selected_opt = s.options[s.selectedIndex].value;
+            break;
+        case 'D': var s = document.getElementById("selected_computer");
+                    var selected_opt = s.options[s.selectedIndex].value;
+            break;
+        case 'E': var s = document.getElementById("selected_game");
+                    var selected_opt = s.options[s.selectedIndex].value;
+            break;
+      }
+      console.log("선택된 옵션: "+selected_opt);
+
+      channelRef_user.child('board_info').push({"title": title, "time": time, "contents": contents, "username": username, "category": selected_opt});
      channelRef_list.push({
        "title":title,
        "time": time,
        "contents": contents,
        "userid": uid,
-       "username": username
+       "username": username,
+       "category": selected_opt
      },(error) => {
   if (error) {
     // The write failed...
@@ -143,15 +191,64 @@
         <section>
           <div>
             <label><h3>카테고리</h3></label>
-              <li id="writeCategory">
-                <div>
-                  <select id="writeCategoryOption">
-                    <option value='A'>농구</option>
-                    <option value='T'>축구</option>
-                    <option value='C'>배구</option>
-                  </select>
+            <li id='category'>
+                <div >
+                    <select id='selected_category' onchange="list_change()">
+                        <option value="A">스포츠</option>
+                        <option value='B'>음악</option>
+                        <option value='C'>생활</option>
+                        <option value='D'>컴퓨터</option>
+                        <option value='E'>게임</option>
+                    </select>
                 </div>
-              </li>
+            </li>
+
+
+                <div >
+                    <select id='selected_sports'>
+                        <option value='basketball'>농구</option>
+                        <option value='baseball'>야구</option>
+                        <option value='football'>축구</option>
+                        <option value='swimming'>수영</option>
+                    </select>
+                </div>
+
+
+                <div >
+                    <select id='selected_music' style="display:none">
+                        <option value='piano'>피아노</option>
+                        <option value='guitar'>기타</option>
+                        <option value='flute'>플룻</option>
+                        <option value='violin'>바이올린</option>
+                    </select>
+                </div>
+
+                <div >
+                    <select id='selected_living' style="display:none">
+                        <option value='cleaning'>청소</option>
+                        <option value='saving'>저축</option>
+                        <option value='cooking'>요리</option>
+                        <option value='education'>교육</option>
+                    </select>
+                </div>
+
+                <div >
+                    <select id='selected_computer' style="display:none">
+                        <option value='web'>웹프로그래밍</option>
+                        <option value='db'>데이터베이스</option>
+                        <option value='data_com'>데이터통신</option>
+                        <option value='language'>언어(자바/C++)</option>
+                    </select>
+                </div>
+
+                <div >
+                    <select id='selected_game' style="display:none">
+                        <option value='lol'>롤</option>
+                        <option value='fifa'>피파</option>
+                        <option value='maplestory'>메이플</option>
+                        <option value='cartrider'>카트라이더</option>
+                    </select>
+                </div>
             </div>
             <div style="margin-top:55px;">
               <label><h3>제목</h3></label>
